# wjfchat

./: .gitignore  CMakeLists.txt  bysj.lnk  global.cpp  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.ui  mainwindow.cpp  registdialog.cpp  registdialog.h  registdialog.ui  resources.qrc  singleton.h
VerifServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  server.js
bysj/: chat.cpp  test.txt  关于cmake.cpp
client/: CMakeLists.txt  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registdialog.cpp  registdialog.cpp.autosave  registdialog.h  resources.qrc  singleton.h
client/style/: stylesheet.qss
server/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.sln  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  PropertySheet1.props  Singleton.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.proto
style/: stylesheet.qss
